--- a/symposium.bib
+++ b/symposium.bib
@@ -174,6 +174,15 @@ publisher={Springer US}}
   series = {GECCO '25}
 }
 
+@article{leite2025jpnsectransaction,
+  author = {Leite, Rui and Aguirre, Hernan and Tanaka, Kiyoshi},
+  journal = {Transaction of the Japanese Society for Evolutionary Computation},
+  number = {},
+  title = {Evolutionary Framework for Solving Simultaneous Continuous Games with Multi-Objective Players},
+  volume = {},
+  year = {Accepted}
+}
+
 @article{dijk2013flipit,
   title={{FlipIt}: The game of ``stealthy takeover''},
   author={Van Dijk, Marten and Juels, Ari and Oprea, Alina and Rivest, Ronald L},
