Fixes some other reference case issues.

--- a/symposium.bib
+++ b/symposium.bib
@@ -14,7 +14,7 @@ publisher={Springer US}}
 }
 
 @inproceedings{laszka2014flipthem,
-  title={FlipThem: Modeling targeted attacks with {FlipIt} for multiple resources},
+  title={{FlipThem}: Modeling targeted attacks with {FlipIt} for multiple resources},
   author={Laszka, Aron and Horvath, Gabor and Felegyhazi, Mark and Butty{\'a}n, Levente},
   booktitle={Decision and Game Theory for Security: 5th International Conference, GameSec 2014, Los Angeles, CA, USA, November 6-7, 2014. Proceedings 5},
   pages={175--194},
@@ -81,7 +81,7 @@ publisher={Springer US}}
 }
 
 @article{lung2008computing,
-  title={Computing Nash equilibria by means of evolutionary computation},
+  title={Computing {Nash} equilibria by means of evolutionary computation},
   author={Lung, Rodica Ioana and Dumitrescu, Dan},
   journal={Int. J. of Computers, Communications \& Control},
   volume={3},
@@ -91,7 +91,7 @@ publisher={Springer US}}
 }
 
 @article{lung2020pareto,
-  title={Pareto-based evolutionary multiobjective approaches and the generalized Nash equilibrium problem},
+  title={Pareto-based evolutionary multiobjective approaches and the generalized {Nash} equilibrium problem},
   author={Lung, Rodica Ioana and Gask{\'o}, No{\'e}mi and Suciu, Mihai Alexandru},
   journal={Journal of Heuristics},
   volume={26},
@@ -159,7 +159,7 @@ publisher={Springer US}}
 
 @inproceedings{leite2025gecco,
   author = {Leite, Rui and Aguirre, Hernan and Tanaka, Kiyoshi},
-  title = {Key Insights into Estimating Nash Equilibria in Simultaneous Continuous Multiplayer Games Using Coevolutionary Algorithms},
+  title = {Key Insights into Estimating {Nash} Equilibria in Simultaneous Continuous Multiplayer Games Using Coevolutionary Algorithms},
   year = {2025},
   isbn = {9798400714658},
   publisher = {Association for Computing Machinery},
