Incorporates Prof. Gilberto's suggestion to list paper as "In press".

--- a/symposium.bib
+++ b/symposium.bib
@@ -180,7 +180,7 @@ publisher={Springer US}}
   number = {},
   title = {Evolutionary Framework for Solving Simultaneous Continuous Games with Multi-Objective Players},
   volume = {},
-  year = {Accepted}
+  year = {In press}
 }
 
 @article{dijk2013flipit,
